--- a/index.html
+++ b/index.html
@@ -3,40 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Google Meu Negócio + Mini Site Profissional</title>
+  <title>Atualize seu Google Meu Negócio + Mini Site Profissional</title>
   <style>
-    body {
+    /* Resetando margens e ajustando layout */
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlXzeR_yRmZw_chUhiFwbi2KncnR01wDjReQ&s') no-repeat center center/cover;
       color: #fff;
       line-height: 1.6;
       position: relative;
+      padding: 0;
+      overflow-x: hidden;
     }
     body::before {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.6); /* transparência suave */
+      background-color: rgba(0, 0, 0, 0.6);
       z-index: 0;
     }
     .content {
       position: relative;
       z-index: 1;
+      padding: 20px;
     }
     header {
       text-align: center;
       padding: 40px 20px;
+      animation: fadeInDown 1s ease-in-out;
     }
     header h1 {
-      font-size: 36px;
-      margin: 0;
-      animation: fadeInDown 1s ease-in-out;
+      font-size: 38px;
+      font-weight: 700;
+      color: #FFD700;
     }
     header p {
       font-size: 20px;
       margin-top: 10px;
+      font-weight: 600;
     }
     .verificado {
       display: flex;
@@ -56,32 +66,34 @@
       to { opacity: 1; transform: translateY(0); }
     }
     .oferta, .beneficios, .cta, footer, .depoimentos {
+      background-color: rgba(255, 255, 255, 0.1);
       padding: 40px 20px;
-      background-color: rgba(255,255,255,0.1);
-      border-radius: 12px;
       margin: 20px auto;
-      max-width: 800px;
+      border-radius: 12px;
+      max-width: 1000px;
     }
     .oferta h2 {
-      color: #ffd700;
-      font-size: 28px;
+      color: #FFD700;
+      font-size: 32px;
+      font-weight: 600;
     }
     .video-container {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
       gap: 20px;
       padding: 20px;
     }
     .video {
-      flex: 1 1 300px; /* mínimo 300px, cresce conforme espaço */
+      flex: 1 1 48%;
       max-width: 500px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      border-radius: 12px;
     }
     .video iframe {
       width: 100%;
       height: 280px;
       border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.4);
     }
     .beneficios ul {
       list-style: none;
@@ -89,8 +101,9 @@
     }
     .beneficios li {
       margin-bottom: 12px;
-      position: relative;
       padding-left: 24px;
+      position: relative;
+      font-size: 18px;
     }
     .beneficios li::before {
       content: "✔";
@@ -105,9 +118,10 @@
       padding: 16px 28px;
       text-decoration: none;
       border-radius: 8px;
-      font-size: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      font-size: 22px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       animation: pulse 1.5s infinite;
+      display: inline-block;
     }
     @keyframes pulse {
       0% { transform: scale(1); }
@@ -118,31 +132,36 @@
       text-align: center;
       font-size: 14px;
       color: #ccc;
+      margin-top: 40px;
     }
     .depoimentos {
-      padding: 40px 20px;
-      background-color: rgba(255,255,255,0.1);
+      background-color: rgba(0, 0, 0, 0.5);
       border-radius: 12px;
+      padding: 40px 20px;
+      max-width: 1000px;
       margin: 20px auto;
-      max-width: 800px;
       animation: fadeIn 1s ease-in-out;
     }
-
     .depoimentos h3 {
-      font-size: 24px;
-      color: #ffd700;
-      margin-bottom: 20px;
+      color: #FFD700;
+      font-size: 28px;
       text-align: center;
+      margin-bottom: 20px;
     }
-
     .depoimentos blockquote {
       font-style: italic;
-      background-color: rgba(0,0,0,0.5);
       padding: 16px;
       border-left: 4px solid #0f0;
+      background-color: rgba(0, 0, 0, 0.3);
       margin-bottom: 20px;
-      border-radius: 8px;
       color: #fff;
+      border-radius: 8px;
+    }
+    @media (max-width: 768px) {
+      .video {
+        flex: 1 1 100%;
+        max-width: 100%;
+      }
     }
   </style>
 </head>
